# astragalaxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Justfile  LICENSE  Makefile  README.md  atlas.hcl  docker-compose-test.yaml  docker-compose.dev.yaml  docker-compose.yaml  docker.sh  go.mod  go.sum  pyproject.toml  sqlc.yaml
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
api/: .env.example  .gitignore  Dockerfile  Justfile  Makefile  docker-compose-test.yaml  docker-compose.yaml  go.mod  go.sum  main.go  openapi.yaml
api/cmd/: main.go
api/data/: items.json  locations.json
api/handler/: auth.go  flights.go  handler.go  middleware.go  planet.go  planets.go  registry.go  spaceships.go  systems.go
api/models/: item.go  planet.go  spaceship.go  system.go  user.go
api/registry/: items.go  tags.go
api/repositories/: item.go  itemDataTag.go  location.go  planet.go  spaceship.go  system.go  user.go
api/schemas/: auth.go  item.go  location.go  planet.go  response.go  spaceship.go  system.go  user.go
api/services/: item.go  location.go  planet.go  spaceship.go  system.go  user.go
api/state/: state.go
api/utils/: config.go  errors.go  token.go
astragalaxy/: __main__.py  config.py  cooldown_manager.py  di.py  identity_provider.py  jwt_token_processor.py  main.py  utils.py
astragalaxy/api/: dependencies.py
astragalaxy/data/: locations.py
astragalaxy/database/: __init__.py
astragalaxy/dto/: character.py  cooldown.py  inventory.py  item.py  planet.py  point.py  resource.py  spaceship.py  station.py  system.py  user.py
astragalaxy/exceptions/: character.py  point.py  spaceship.py  staion.py  system.py  user.py
astragalaxy/interfaces/: identity_provider.py  session.py
astragalaxy/repositories/: character.py  cooldown.py  inventory.py  item.py  planet.py  point.py  resource.py  spaceship.py  station.py  system.py  system_connection.py  user.py
astragalaxy/use_cases/: add_spaceship.py  create_character.py  create_planet.py  create_point.py  create_system.py  delete_character.py  delete_planet.py  delete_system.py  enter_spaceship.py  exit_spaceship.py  get_character.py  get_inventory.py  get_planet.py  get_point.py  get_point_planets.py  get_point_stations.py  get_spaceship.py  get_station.py  get_system.py  get_system_points.py  get_user.py  hyperjump.py  login.py  navigate_to_planet.py  navigate_to_point.py  register.py  rename_spaceship.py  set_active_spaceship.py
bot/: .env.example  .gitignore  Dockerfile  config.toml  config_reader.py  constants.py  main.py  pyproject.toml
bot/api/: __init__.py  api.py  base.py  exceptions.py
bot/api/methods/: __init__.py
bot/api/methods/auth/: __init__.py  get_me.py  get_token.py  login.py  register.py
bot/api/methods/flights/: __init__.py  hyperjump.py  info.py  planet.py
bot/api/methods/spaceships/: __init__.py  enter.py  exit.py  get_my.py  rename.py
bot/api/methods/systems/: __init__.py  get_all.py  get_by_id.py  get_planets.py
bot/api/types/: flight_info.py  location.py  planet.py  spaceship.py  system.py  token.py  user.py
bot/dialogs/: __init__.py  setlang.py
bot/dialogs/main_menu/: __init__.py  spaceship.py  starmap.py  states.py
bot/dialogs/widgets/: __init__.py  copy_button.py
bot/filters/: admin.py  chat_type.py
bot/handlers/: basic.py  spaceship.py  starmap.py
bot/locales/en/: basic.ftl  buttons.ftl  main_menu.ftl
bot/locales/ru/: basic.ftl  buttons.ftl  main_menu.ftl
bot/middlewares/: __init__.py  user.py
bot/utils/: notifications.py  token_manager.py  validators.py
cmd/initialdata/: main.go
cmd/server/: main.go
cmd/web/: main.go
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: errors.rs  lib.rs
crates/libs/lib-core/src/models/: location.rs  mod.rs  planet.rs  spaceship.rs  system.rs  user.rs
crates/libs/lib-core/src/repositories/: location.rs  mod.rs  planet.rs  spaceship.rs  system.rs  user.rs
crates/libs/lib-core/src/schemas/: location.rs  mod.rs  planet.rs  spaceship.rs  system.rs  user.rs
crates/libs/lib-core/src/services/: location.rs  planet.rs  spaceship.rs  system.rs  user.rs
crates/services/api/: Cargo.toml
crates/services/api/src/: config.rs  errors.rs  main.rs  state.rs
crates/services/api/src/middlewares/: auth.rs
crates/services/api/src/routes/: auth.rs  flights.rs  mod.rs  planets.rs  players.rs  spaceships.rs  systems.rs  ton_proof.rs  websocket.rs
crates/services/api/src/schemas/: auth.rs  mod.rs  responses.rs  spaceship.rs
data/: items.json  locations.json  resources.json  tags.json
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml
migrations/: 000001_initial.up.sql  000002_ships_name.down.sql  000002_ships_name.up.sql  20250405105504.sql  20250405124941.sql  20250405174459.sql  20250411154920.sql  20250430160937.sql  20250503161541.sql  20250503164655.sql  20250516131235.sql  20250516154814.sql  20250517110237.sql  20250517125906.sql  20250517134640.sql  20250518100025.sql  atlas.sum  env.py
voidspace/: __main__.py  config.py  cooldown_manager.py  di.py  identity_provider.py  jwt_token_processor.py  main.py  password_hasher.py  utils.py
(+594 files in other folders)
