[workspace]
resolver = "2"
members = [
    "crates/libs/lib-auth",
    "crates/libs/lib-core",
    "crates/libs/lib-utils",
    "crates/services/api",
    "crates/services/dsbot",
    "crates/tools/initial-data",
]
default-members = ["crates/services/api"]

[workspace.dependencies]
thiserror = "1.0.63"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
tracing = "0.1.40"
lib-core = { path = "crates/libs/lib-core" }
lib-auth = { path = "crates/libs/lib-auth" }
lib-utils = { path = "crates/libs/lib-utils" }
