[tool.poetry]
name = "bot"
version = "0.4.1"
description = "AstraGalaxy game telegram bot"
authors = ["sqlmerr <sqlmerr@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
aiogram-i18n = "^1.4"
pydantic-settings = "^2.6.0"
loguru = "^0.7.2"
fluent-runtime = "^0.4.0"
aiogram-dialog = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
