[project]
name = "bot"
version = "0.4.1"
description = "AstraGalaxy game telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiogram-dialog>=2.3.1",
    "aiogram-i18n>=1.4",
    "fluent-runtime>=0.4.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.0",
    "redis>=5.2.1",
]

[dependency-groups]
dev = ["ruff>=0.9.7"]
