[package]
name = "lib-core"
version = "0.4.1"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = "0.4.39"
futures = "0.3.30"
lib-auth.workspace = true
lib-utils.workspace = true
mongodb = "3.1.0"
serde = { workspace = true }
serde_with = "3.11.0"
thiserror = { workspace = true }
tokio.workspace = true
