[package]
name = "api"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { workspace = true, features = ["full"] }
lib-core = { workspace = true }
dotenvy = "0.15.7"
thiserror.workspace = true
serde_json = "1.0.122"
serde.workspace = true
lib-auth.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
lib-ton.workspace = true
